# GHOSTS

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .release-please-manifest.json  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile-api  GHOSTS.sln  Ghosts.sln  LICENSE.md  README.md  SECURITY.md  aspire.config.json  ghosts.api.sln  ghosts.linux.sln  ghosts.slnx  ghosts.windows.sln  index.html  mkdocs.yml  package.json  release-please-config.json
.aspire/: settings.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  init  init.cmd  postcreate.sh  poststart.sh  setup.ps1  setup.sh
Ghosts.Api/: .gitignore  Dockerfile  Ghosts.Api.csproj  Program.cs  Startup.cs  appsettings.json  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.yml  (+2 more)
experimental/rpg/: .gitignore  DESIGN.md  README.md  pyproject.toml  run.sh
experimental/rpg/fixtures/scenarios/: operation-overlord.json  phishing-drill.json  soc-morning.json
experimental/rpg/frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
experimental/rpg/frontend/src/: index.html  styles.scss
experimental/rpg/frontend/src/app/: app.config.ts  app.html  app.scss  app.ts  rpg-api.service.ts  rpg.models.ts
experimental/rpg/src/ghosts_rpg/: __init__.py  app.py  config.py  control.py  dm.py  engine.py  game.py  llm.py  loader.py  models.py  play.py  scoring.py  session.py
experimental/rpg/tests/: test_api.py  test_control.py  test_engine.py  test_game.py  test_loader.py  test_overlord.py  test_worklist.py
(+3015 files in other folders)
